# gtest_gmock_test

./: CMakeLists.txt  README.md
include/: person.h
test/: CMakeLists.txt  hello_test.cc  mockPerson.h
thirdPart/gtest/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_for_dummies.md
thirdPart/gtest/docs/_data/: navigation.yml
thirdPart/gtest/docs/_layouts/: default.html
thirdPart/gtest/docs/_sass/: main.scss
thirdPart/gtest/googlemock/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h  gmock.h
thirdPart/gtest/googlemock/include/gmock/internal/: gmock-internal-utils.h  gmock-port.h  gmock-pp.h
thirdPart/gtest/googlemock/include/gmock/internal/custom/: gmock-generated-actions.h  gmock-matchers.h  gmock-port.h
thirdPart/gtest/googletest/include/gtest/: gtest-death-test.h  gtest-printers.h  gtest.h
thirdPart/gtest/googletest/include/gtest/internal/: gtest-filepath.h  gtest-internal.h  gtest-port-arch.h  gtest-port.h
thirdPart/gtest/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest.cc
thirdPart/gtest/googletest/test/: BUILD.bazel
